fix(anonymizer): resolve SonarCloud reliability and security findings
Quality gate failed on new_reliability_rating (10 potential NPEs) and
new_security_rating (2 flagged items).

- Collection getters (getDatabases/getTables/getColumns/getSchemas) now
  return empty collections instead of null, removing the NPE paths at
  their call sites and simplifying the redundant null guards
- DbUtils.createDataSource rejects a null config explicitly
- validateSource/TargetConfiguration read the config once into a local so
  the non-null contract is visible to analysis
- Shared Random for JavaFaker documented and annotated: determinism is
  required and the privacy guarantee comes from the keyed HMAC seed
- ensureSchemaExists annotated: DDL cannot be parameterized and the
  schema identifier is validated before quoting
- Extracted duplicated strategy literals into constants

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>